<resources>
    <string name="app_name">HandyCApp</string>

    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDPCEPDk80IChL-X9o36VdBZe0KaZ2SNqQ</string>-->


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="app_name_full">Handy Remote Data Collection App (HandyCApp)</string>
    <string name="lidar1">UPLB Phil-LiDAR 1</string>

    <string name="nav_addrecord">Add Record</string>
    <string name="nav_viewrecords">View Records</string>
    <string name="nav_export">Export to CSV</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>

    <!-- Strings for Add record form-->

    <string name="riverBasin">River Basin</string>

    <string name="buildingName">Building Name</string>
    <string name="buildingUse">Building Use</string>

    <!-- Building use string array -->
    <string name="residential">Residential</string>
    <string name="school">School</string>
    <string name="brgyhall">Barangay Hall</string>
    <string name="religious">Religious Institution</string>
    <string name="apartment">Apartment</string>
    <string name="commercial">Commercial</string>
    <string name="others">Others(Please Specify)</string>

    <string name="laguna">Laguna</string>
    <string name="occmin">Occidental Mindoro</string>
    <string name="ormin">Oriental Mindoro</string>
    <string name="marinduque">Marinduque</string>
    <string name="romblon">Romblon</string>
    <string name="palawan">Palawan</string>


    <string name="barangay">Barangay</string>
    <string name="municipality">Municipality</string>
    <string name="province">Province</string>



    <string name="events">Events</string>
    <string name="dateOccurrence">Date of Occurrence</string>
    <string name="timeOccurrence">Time of Occurrence</string>
    <string name="floodDepth">Actual Flood Depth (m)</string>



    <string name="save">Save!</string>

    <string name="latitude_notset">Latitude (not set)</string>
    <string name="longitude_notset">Longitude (not set)</string>
    <string name="location">Location</string>
    <string name="requestLocation">Request Location</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="exportHint">Hint: CSV files that are generated through this app can be found at root/sdcard/handycapp_csv/</string>
</resources>
