<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_addrecord"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_addrecord" />
        <item
            android:id="@+id/nav_viewrecords"
            android:icon="@drawable/ic_list_black"
            android:title="@string/nav_viewrecords" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/nav_export" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_outline_black"
            android:title="@string/nav_about" />


    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
